# voice-assistant

./: .gitignore  README.md  pyproject.toml
client/: ui.py
esp32/: platformio.ini
esp32/boards/: esp32-s3-devkitc-1-n16r8.json
esp32/src/: main.cpp
server/: agent.py  audio_utils.py  core.py  db.py  main.py  models.py  openai_services.py  prompts.py  schemas.py  ui.py  websocket_manager.py
