[project]
name = "voiceassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "openai-agents[voice]>=0.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "streamlit>=1.49.1",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
